# tankwa-ui

./: Cargo.toml
data/: message.json
src/: main.rs  message.rs
src/views/: chat_view.rs
ui/: app-window.slint
ui/views/: chat-view.slint
