[package]
name = "chatty"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.14.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
slint-build = "1.14.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
